--- a/Modelo-Interfaz/package.json
+++ b/Modelo-Interfaz/package.json
@@ -12,7 +12,9 @@
     "react-calendar": "^3.4.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-table": "^7.7.0",
+    "sweetalert2": "^11.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
