--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/CamiloBzt/ProyectoMinticCiclo4#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "connect-multiparty": "^2.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.3",
     "validator": "^13.6.0"
   },
